crates/mun_codegen/src/snapshots/test__void_return_file_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn bar() {\n    let a = 3;\n}\nfn foo(a:int) {\n    let c = bar()\n}"
---
; ModuleID = 'main.mun'
source_filename = "main.mun"

%DispatchTable = type { void ()* }

@dispatchTable = external global %DispatchTable

define void @bar() {
body:
  ret void
}

define void @foo(i64) {
body:
  %bar_ptr = load void ()*, void ()** getelementptr inbounds (%DispatchTable, %DispatchTable* @dispatchTable, i32 0, i32 0)
  call void %bar_ptr()
  ret void
}

