crates/mun_codegen/src/snapshots/test__void_return_group_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn bar() {\n    let a = 3;\n}\nfn foo(a:int) {\n    let c = bar()\n}"
---
; ModuleID = 'group_name'
source_filename = "group_name"

%DispatchTable = type { void ()* }

@dispatchTable = global %DispatchTable { void ()* @bar }

declare void @bar()

