crates/mun_codegen/src/snapshots/test__while_expr_group_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn foo(n:int) {\n    while n<3 {\n        n += 1;\n    };\n\n    // This will be completely optimized out\n    while n<4 {\n        break;\n    };\n}"
---
; ModuleID = 'group_name'
source_filename = "group_name"

